test/arrays/johnk/associative/tooFewKeys.good
tooFewKeys.chpl:2: error: halt reached - zippered associative array does not match the iterated domain
