test/arrays/johnk/associative/tooFewKeys.chpl
var D = {"foo", "bar"};
var arr : [D] int = ["bar"=>1];

writeln(arr);
